# Mia

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: template.py
android/in/app/: build.gradle
android/in/app/jni/SDL/src/main/windows/: version.rc
android/in/app/jni/SDL_image/: version.rc
android/in/app/jni/SDL_image/VisualC/: Version.rc
android/in/app/jni/SDL_mixer/: version.rc
android/in/app/jni/SDL_mixer/VisualC/: Version.rc
android/in/app/jni/mia/: Android.mk
android/in/app/src/main/: AndroidManifest.xml
android/in/app/src/main/java/de/horsimann/mia/: Main.java
android/in/app/src/main/res/values/: strings.xml  styles.xml
doc/: examples.md  install.md  miapaint.md
include/: mia.h
include/a/: ADefer.h  AScene.h  AView.h  a.h  ad.h  app.h  billing.h  input.h  pointer.h
include/app/ex/: EXViewClose.h  ex.h  tea.h  thunder.h
include/app/mp/: MPView.h  brush.h  canvas.h  log.h  main.h  mp.h  views.h
include/ex/: ex.h  main.h
include/m/: byte.h  common.h  dbl.h  flt.h  int.h  m.h
include/m/io/: bvec2.h  bvec3.h  bvec4.h  bvecn.h  byte.h  dbl.h  dmat2.h  dmat3.h  dmat4.h  dmatn.h  dvec2.h  dvec3.h  dvec4.h  dvecn.h  flt.h  int.h  ivec2.h  ivec3.h  ivec4.h  ivecn.h  mat2.h  mat3.h  mat4.h  matn.h  vec2.h  vec3.h  vec4.h  vecn.h
include/m/m_types/: byte.h  dbl.h  flt.h  int.h
include/m/mat/: dbl.h  dmat2.h  dmat3.h  dmat4.h  dmatn.h  flt.h  mat2.h  mat3.h  mat4.h  matn.h
include/m/sca/: byte.h  dbl.h  flt.h  int.h
include/m/types/: byte.h  dbl.h  flt.h  int.h
include/m/utils/: camera.h  color.h  dbl.h  dcamera.h  dcolor.h  dintersection.h  dquat.h  drandom.h  drotation.h  flt.h  intersection.h  quat.h  random.h  rotation.h
include/m/vec/: bvec2.h  bvec3.h  bvec4.h  bvecn.h  byte.h  dbl.h  dvec2.h  dvec3.h  dvec4.h  dvecn.h  flt.h  int.h  ivec2.h  ivec3.h  ivec4.h  ivecn.h  vec2.h  vec3.h  vec4.h  vecn.h
include/mp/: MPView.h  brush.h  canvas.h  log.h  main.h  mp.h  views.h
include/o/: OArray.h  OCondition.h  ODelcallback.h  OFetch.h  OFuture.h  OJoin.h  OJson.h  OMap.h  OObj.h  OObjRoot.h  OObj_builder.h  OPattern.h  OPtr.h  OQueue.h  OSocketserver.h  OStream.h  OStreamArray.h  OStreamBuffered.h  OStreamMem.h  OStreamSdl.h  OStreamSocket.h  OTask.h  OThread.h  OThreadpool.h  OWeakjoin.h  allocator.h  clipboard.h  common.h  endian.h  file.h  img.h  log.h  o.h  socket.h  str.h  str_range.h  tar.h  terminalcolor.h  timer.h
include/r/: RBuffer.h  RBufferQuad.h  RBufferRect.h  RCam.h  RObj.h  RObjGroup.h  RObjQuad.h  RObjRect.h  RObjText.h  RProgram.h  RShader.h  RShaderQuad.h  RShaderQuadChannelmerge.h  RShaderQuadDab.h  RShaderQuadKernel.h  RShaderQuadMerge.h  RShaderRect.h  RTex.h  RTex_manip.h  common.h  format.h  gl.h  program.h  proj.h  quad.h  r.h  rect.h  tex.h
include/s/: SFilter.h  SFilterFade.h  STrack.h  STrackArena.h  STrackArray.h  common.h  ogg.h  s.h  wav.h
include/u/: UImg.h  USplit.h  atlas.h  btn.h  color.h  discr.h  gradient.h  grid.h  pose.h  rect.h  scroll.h  splash.h  u.h  waveform.h
include/w/: WAlign.h  WBox.h  WBtn.h  WClick.h  WColor.h  WDrag.h  WFrame.h  WGradient.h  WGrid.h  WIcon.h  WImg.h  WImgPicker.h  WNum.h  WObj.h  WPane.h  WProgress.h  WSlider.h  WStack.h  WStyle.h  WText.h  WTextShadow.h  WTheme.h  WView.h  WWindow.h  WWindowDialog.h  w.h
include/x/: XViewFiles.h  XViewKeys.h  XViewTex.h  XViewText.h  XWObjColor.h  file.h  gradient.h  iui.h  num.h  viewfiles.h  viewtex.h  viewtext.h  x.h
logo/debug/: template.py
logo/ex_tea/: template.py
res/r/: Quad.glsl  QuadChannelmerge.glsl  QuadDab.glsl  QuadKernel_bloom.glsl  QuadKernel_contour.glsl  QuadKernel_contour_inv.glsl  QuadKernel_conv.glsl  QuadMerge.glsl  Quad_addscaled.glsl  Quad_color.glsl  Quad_color_hsva.glsl  Quad_hsva_from_rgba.glsl  Quad_hsva_into_rgba.glsl  Quad_mixer.glsl  Rect.glsl  Rect_color.glsl
src/: main.c
src/a/: ADefer.c  AScene.c  AView.c  a.c  ad.c  app.c  billing.c  input.c  pointer.c
src/app/ex/: EXViewClose.c  ex.c  ex_02_animations.c  ex_04_widgets.c  ex_07_xtras.c  ex_09_upndownload.c  main.c  tea.c  thunder.c
src/app/mp/: MPView.c  brush.c  canvas.c  main.c  mp.c  views_canvas.c  views_palette.c  views_pattern.c
src/ex/: EXViewClose.c  ex.c  ex_00_hello_world.c  ex_01_pointers.c  ex_03_iui.c  ex_05_windows.c  ex_06_sound.c  ex_08_fetching.c  main.c  tea.c
src/m/: io_byte.c  io_dbl.c  io_flt.c  io_int.c  m.c  mat_dbl_matn.c  mat_flt_matn.c
src/mp/: MPView.c  brush.c  canvas.c  main.c  mp.c  views_canvas.c  views_palette.c  views_pattern.c
src/o/: OArray.c  OCondition.c  ODelcallback.c  OFetch_android.c  OFetch_curl.c  OFetch_emscripten.c  OFuture.c  OJoin.c  OJson.c  OMap.c  OObj.c  OPattern.c  OPtr.c  OQueue.c  OSocketserver.c  OStream.c  OStreamArray.c  OStreamBuffered.c  OStreamMem.c  OStreamSdl.c  OStreamSocket.c  OTask.c  OThread.c  OThreadpool.c  OWeakjoin.c  allocator.c  clipboard.c  common.c  file.c  file_android.c  file_dirent.h  file_emscripten.c  file_sfd.c  img.c  log.c  o.c  socket.c  str.c  tar.c  terminalcolor.c  (+1 more)
src/r/: RBuffer.c  RBufferQuad.c  RBufferRect.c  RCam.c  RObj.c  RObjGroup.c  RObjQuad.c  RObjRect.c  RObjText.c  RProgram.c  RShader.c  RShaderQuad.c  RShaderQuadChannelMerge.c  RShaderQuadDab.c  RShaderQuadKernel.c  RShaderQuadMerge.c  RShaderRect.c  RTex.c  common.c  program.c  proj.c  quad.c  r.c  rect.c  tex.c
src/s/: SFilter.c  SFilterFade.c  STrack.c  STrackArena.c  STrackArray.c  common.c  ext_stb_vorbis.c  ogg.c  s.c  wav.c
src/u/: UImg.c  USplit.c  atlas.c  discr.c  gradient.c  pose.c  scroll.c  splash.c  u.c  waveform.c
src/w/: WAlign.c  WBox.c  WBtn.c  WClick.c  WColor.c  WDrag.c  WFrame.c  WGradient.c  WGrid.c  WIcon.c  WImg.c  WImgPicker.c  WNum.c  WObj.c  WPane.c  WProgress.c  WSlider.c  WStack.c  WStyle.c  WText.c  WTextShadow.c  WTheme.c  WView.c  WWindow.c  WWindowDialog.c  w.c
src/x/: XViewFiles.c  XViewKeys.c  XViewTex.c  XViewText.c  XWObjColor.c  file.c  gradient.c  iui.c  num.c  viewfiles.c  viewtex.c  viewtext.c  x.c
test/: main_test.c
test/o/: OArray_test.c  OPattern_test.c  str_test.c
test/r/: RTex_test.c
web/: index.html
(+1 files in other folders)
